# src/main/java/com/santalucia/categorizer/infrastructure/controllers/MovementsApiController.java
@@ -1,10 +1,14 @@
 package com.santalucia.categorizer.infrastructure.controllers;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationToken;
+import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -23,11 +27,13 @@ import lombok.extern.slf4j.Slf4j;
 @RestController()
 @RequestMapping(path = "${openapi.categorizer.base-path}")
 @RequiredArgsConstructor
+@CrossOrigin(originPatterns = "*")
 public class MovementsApiController implements MovementsApi {
 
 	private final CategorizationService categorizationService;
 	private final MovementRepository movementRepository;
 	private final MovementMapper movementMapper;
+	private final PasswordEncoder passwordEncoder;
 
 	@Override
 	public ResponseEntity<MovementCategorizedResource> categorizeMovement(
@@ -35,8 +41,14 @@ public class MovementsApiController implements MovementsApi {
 
 		var authentication = (JwtAuthenticationToken)SecurityContextHolder.
 				getContext().getAuthentication();
-		log.info("Authentication: {}", authentication.getTokenAttributes());
-		log.info("Categorization request {}", movementResource);
+		
+		if (authentication != null) {
+			log.info("Authentication: {}", authentication.getTokenAttributes());
+			
+			log.info("Authorities: {}", authentication.getAuthorities());
+			log.info("Categorization request {}", movementResource);
+		}
+		
 		return ResponseEntity.ok(categorizationService.categorize(movementResource));
 	}
 
@@ -45,7 +57,19 @@ public class MovementsApiController implements MovementsApi {
 		
 		var movements = movementRepository.findAll();
 		
+		
 		return ResponseEntity.ok(movementMapper.toListMovementResource(movements));
+	}
+
+	@Override
+	public ResponseEntity<MovementResource> findByMovementId(String movementId) {
+		
+		log.info("MovementId hashed: {}", passwordEncoder.encode(movementId));
+		
+		var movement = movementMapper.toMovementResource(
+				movementRepository.findByMovementId(UUID.fromString(movementId)));
+				
+		return ResponseEntity.of(Optional.ofNullable(movement));
 	}
 
 	
